<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<name>Log 42</name>
	<description>The safe and fast logging</description>
	<groupId>de.s42</groupId>
	<artifactId>log42</artifactId>
	<version>0.1.0</version>
	<packaging>jar</packaging>
	<modelVersion>4.0.0</modelVersion>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.3.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>			
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<configuration>
							<tasks>
								<exec executable="git" outputproperty="git.revision" failifexecutionfails="false" errorproperty="">
									<arg value="describe"/>
									<arg value="--tags"/>
									<arg value="--always"/>
									<arg value="--abbrev=11"/>
									<arg value="HEAD"/>
								</exec>
								<property name="versionFile" value="${project.basedir}/src/main/resources/de/s42/log42/${project.artifactId}.version"/>	
								<property name="fullVersion" value="${project.version} #${git.revision} ${maven.build.timestamp}"/>								
								<echo file="${versionFile}">${fullVersion}</echo>													
								<echo>New version is ${fullVersion}</echo>
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>						
			<plugin>
				<!-- https://maven.apache.org/surefire/maven-surefire-plugin/examples/testng.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<!-- https://stackoverflow.com/questions/64688896/how-to-make-testng-print-detail-message-about-the-failure -->
					<trimStackTrace>false</trimStackTrace> 
					<argLine>--add-modules de.sft.logft -Dfile.encoding=UTF-8</argLine>
					<parallel>methods</parallel>
					<threadCount>4</threadCount>
					<workingDirectory>${project.basedir}/data/</workingDirectory>
				</configuration>
			</plugin>		
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-dependency-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>			
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-jar-plugin/ -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>libs/</classpathPrefix>						
						</manifest>
						<manifestEntries>
							<Automatic-Module-Name>de.sft.logft</Automatic-Module-Name>
							<!--SplashScreen-Image>splash.jpg</SplashScreen-Image//-->
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>		
			<plugin>
				<!-- https://maven.apache.org/plugins/maven-javadoc-plugin/aggregate-mojo.html -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${project.basedir}/docs</outputDirectory>
					<reportOutputDirectory>${project.basedir}/docs</reportOutputDirectory>
					<destDir>javadoc</destDir>
					<show>private</show>
				</configuration>				
			</plugin>			
		</plugins>
	</build>
</project>